# imsa_tui

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  compose.yml  skills-lock.json
.agents/skills/diagnose/: SKILL.md
.agents/skills/rust-tui-backend/: SKILL.md
.agents/skills/svelte-code-writer/: SKILL.md
.agents/skills/systematic-debugging/: SKILL.md
.agents/skills/webapp-testing/: SKILL.md
.cargo/: config.toml
.github/workflows/: ci.yml  publish-ghcr.yml  release-binary.yml
PLANS/: dhlm-series.md
crates/web-shared/: Cargo.toml
crates/web-shared/src/: lib.rs
crates/web/src/lib/: generated
crates/webui/: Cargo.toml
crates/webui/src/: app.rs  styles.css
docs/: TODO.md  YEW_MIGRATION_PLAN.md  uilimits.txt  wec-lt2-ddp.md
docs/wiki/: Deployment-Docker-Compose.md  Deployment-Docker.md  Development-and-CI.md  Home.md  NLS-Header-Field-Map.md  NLS-WebSocket-Field-Map.md  Operations-Runbook.md  Quick-Start-Compose-and-NPM.md  Quick-Start-Compose-and-Trunk.md  Reverse-Proxy-Nginx-Proxy-Manager.md  Reverse-Proxy-Nginx.md  Troubleshooting.md  WEC-SignalR-Field-Map.md  Web-Auth-and-Sessions.md  _Sidebar.md
scripts/: nls_ws_analyze.py  nls_ws_capture.py
src/: demo.rs  f1.rs  favourites.rs  imsa.rs  lib.rs  main.bak  main.rs  nls.rs  snapshot_runtime.rs  timing.rs  timing_persist.rs  ui.rs
src/adapters/: mod.rs  nurburgring_ws.rs
src/adapters/dhlm/: mod.rs  snapshot.rs
src/adapters/f1/: mod.rs  signalr.rs
src/adapters/imsa/: jsonp.rs  mod.rs  parser.rs  snapshot.rs
src/adapters/insights/: common.rs  mod.rs  session.rs  signalr_ws.rs  snapshot.rs
src/adapters/nls/: countdown.rs  liveticker.rs  mod.rs  protocol.rs  schedule.rs  snapshot.rs
src/adapters/wec/: ddp.rs  mod.rs  model.rs  normalize.rs  store.rs  transport.rs
src/f1/: mod.rs  snapshot.rs
src/feed/: mod.rs  runtime.rs  spawn.rs
src/imsa/: snapshot.rs
src/nls/: countdown.rs  protocol.rs
src/ui/: app.rs  config.rs  feed.rs  gap.rs  grouping.rs  imsa_widths.rs  mod.rs  pit.rs  popups.rs  render.rs  search.rs  series_widths.rs  style.rs  table.rs  wec_widths.rs  width_math.rs  width_state.rs
src/web/: api.rs  auth.rs  bridge.rs  daemon.rs  mod.rs  prefs.rs  runtime.rs  server.rs  sse.rs  state.rs  static_files.rs
tests/: web_auth_regression.rs
web/: Trunk.toml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css  app.d.ts  main.ts
web/src/lib/: api.ts  keys.ts  types.ts
web/src/lib/components/: GroupModal.svelte  HeaderBar.svelte  HelpModal.svelte  MessagesModal.svelte  NlsLivetickerModal.svelte  SeriesModal.svelte  TimingTable.svelte
web/src/lib/stores/: app.ts
web/src/lib/table/: classColors.ts  columns.ts  widths.ts
web/src/routes/: +layout.svelte  +page.svelte
