[package]
name = "imsa_tui"
version = "0.5.4"
edition = "2021"

[features]
default = ["embed-ui"]
embed-ui = ["dep:include_dir"]

[dependencies]
crossterm = "0.27"
ratatui = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
directories = "6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip", "brotli", "deflate"] }
tungstenite = { version = "0.23", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "fs"] }
tokio-stream = { version = "0.1", features = ["sync", "time"] }
mime_guess = "2"
rand = "0.8"
argon2 = "0.5"
libc = "0.2"
include_dir = { version = "0.7", optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
