[workspace]
members = [".", "crates/web-shared", "crates/webui"]
resolver = "2"

[package]
name = "imsa_tui"
version = "0.6.2"
edition = "2021"

[features]
default = ["embed-ui"]
embed-ui = ["dep:include_dir"]

[dependencies]
crossterm = "0.29"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
directories = "6"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls", "gzip", "brotli", "deflate", "query"] }
tungstenite = { version = "0.29", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "fs"] }
tokio-stream = { version = "0.1", features = ["sync", "time"] }
mime_guess = "2"
rand = "0.10"
argon2 = "0.5"
libc = "0.2"
include_dir = { version = "0.7", optional = true }
web-shared = { path = "crates/web-shared" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.release.package.imsa_tui]
opt-level = 3

[profile.release.package.webui]
opt-level = "z"
