[package]
name = "webui"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-events = "0.2"
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-utils = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-shared = { path = "../web-shared" }
web-sys = { version = "0.3", features = ["Element", "EventSource", "HtmlInputElement", "KeyboardEvent", "MessageEvent", "ScrollIntoViewOptions", "ScrollLogicalPosition", "Window"] }
yew = { version = "0.21", features = ["csr"] }
